# llm-gamebook

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  README.md  info.md  pyproject.toml
backend/: pyproject.toml  test.py
backend/llm_gamebook/: constants.py  logger.py  main.py  message_bus.py  providers.py  types.py  utils.py
backend/llm_gamebook/db/: __init__.py  chat.py  create_db.py  db_engine.py
backend/llm_gamebook/db/crud/: message.py  model_config.py  session.py
backend/llm_gamebook/db/models/: __init__.py  message.py  model_config.py  part.py  session.py  usage.py
backend/llm_gamebook/engine/: __init__.py  _model_factory.py  _runner.py  engine.py  manager.py  message.py  session_adapter.py
backend/llm_gamebook/message_bus/: __init__.py  bus_subscriber.py  message_bus.py  messages.py
backend/llm_gamebook/schema/: entity.py  expression.py  project.py
backend/llm_gamebook/schemas/: __init__.py  entity.py  expression.py
backend/llm_gamebook/story/: __init__.py  actions.py  context.py  entity.py  errors.py  middleware.py  project.py  project_manager.py  session_state.py  state.py  store.py  template_view.py  trait_registry.py  types.py
backend/llm_gamebook/story/conditions/: evaluator.py  grammar.py
backend/llm_gamebook/story/schemas/: __init__.py  entity.py  expression.py  project.py  validators.py
backend/llm_gamebook/story/state/: __init__.py  middleware.py  session_state.py  store.py
backend/llm_gamebook/story/templates/: intro_message.md.jinja2
backend/llm_gamebook/story/templates/traits/: _graph.md.jinja2
backend/llm_gamebook/story/traits/: described.py  graph.py
backend/llm_gamebook/tui/: message_list.py  tui_app.py
backend/llm_gamebook/web/: app.py  dev.py  engine_manager.py  get_model.py  get_model_tmp.py
backend/llm_gamebook/web/api/: __init__.py  api_router.py  chat.py  dependencies.py  deps.py  model_config_router.py  models.py  project_router.py  session.py  session_router.py
backend/llm_gamebook/web/api/websocket/: __init__.py  handler.py  models.py  router.py
backend/llm_gamebook/web/schema/session/: __init__.py  part.py  session.py
backend/llm_gamebook/web/schema/websocket/: _convert_part.py  message.py  openapi.py
backend/llm_gamebook/web/schemas/: model_config.py  project.py
backend/llm_gamebook/web/schemas/session/: message.py  part.py  session.py
backend/llm_gamebook/web/schemas/websocket/: _convert_part.py  message.py
backend/llm_gamebook/web/websocket/: __init__.py  dependencies.py  handler.py  router.py
backend/tests/: __init__.py  conftest.py  test_message_bus.py  test_model_config.py  test_model_factory.py
backend/tests/broken_bulb/: conftest.py  test_story_flow.py
backend/tests/broken_bulb/mocks/: model.py  player.py
backend/tests/llm_gamebook/: conftest.py  test_message_bus.py  test_utils.py
backend/tests/llm_gamebook/db/crud/: test_message.py  test_model_config.py  test_session.py
backend/tests/llm_gamebook/db/models/: test_message.py  test_model_config.py  test_part.py  test_session.py  test_usage.py
backend/tests/llm_gamebook/engine/: conftest.py  test_engine.py  test_manager.py  test_message.py  test_model_factory.py  test_runner.py  test_session_adapter.py  test_story_engine.py
backend/tests/llm_gamebook/schema/: test_expression.py  test_validators.py
backend/tests/llm_gamebook/schemas/: test_expression.py  test_validators.py
backend/tests/llm_gamebook/story/: test_actions.py  test_context.py  test_entity.py  test_errors.py  test_project.py  test_project_manager.py  test_session_state.py  test_state.py  test_store.py  test_template_view.py  test_trait_reducers.py  test_trait_registry.py  test_traits_described.py  test_traits_graph.py
backend/tests/llm_gamebook/story/conditions/: conftest.py  test_evaluator.py  test_grammar.py
backend/tests/llm_gamebook/story/schemas/: test_entity.py  test_project.py  test_validators.py
backend/tests/llm_gamebook/story/state/: test_actions.py  test_session_state.py  test_store.py
backend/tests/llm_gamebook/story/traits/: test_described.py  test_graph.py
backend/tests/llm_gamebook/web/: conftest.py
backend/tests/llm_gamebook/web/api/: test_model_config_router.py  test_project_router.py  test_session_router.py
backend/tests/llm_gamebook/web/schemas/: test_convert_part.py  test_project.py  test_session.py
backend/tests/llm_gamebook/web/schemas/websocket/: test_message.py
backend/tests/llm_gamebook/web/websocket/: conftest.py  test_handler.py  test_router.py
docs/: architecture.md  editor.md  notes.md  story-projects.md  todos.md
docs/session-state/: architecture.md  steps-overview.md
examples/broken-bulb/: llm-gamebook.yaml
examples/llm-gamebook/broken-bulb/: llm-gamebook.yaml
frontend/: eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  Routes.tsx  constants.ts  main.tsx  mantine.d.ts  routes.ts  store.ts  utils.ts
frontend/src/api/: errors.ts
frontend/src/contexts/: CollapseContext.ts  PortalContext.tsx  WebSocketContext.tsx
frontend/src/hooks/: chats.ts  messages.ts  modals.tsx  model-config.ts  modelConfig.ts  notifications.tsx  portal.ts  project.ts  session.ts  time.ts  useWebSocketConnection.ts  websocket.ts
frontend/src/routes/: Routes.tsx  index.ts  routes.ts
frontend/src/services/: chat.ts  modelConfig.ts  project.ts  (+1 more)
llm_gamebook/: engine.py  example.py  logger.py  main.py  messages.py  types.py  utils.py
llm_gamebook/db/: __init__.py  chat.py  message.py
llm_gamebook/engine/: __init__.py  context.py  engine.py  messages.py  tui.py
llm_gamebook/schema/: __init__.py  base.py  entity.py  expression.py  project.py  validators.py
llm_gamebook/story/: __init__.py  base.py  condition.py  context.py  entity.py  errors.py  graph.py  loader.py  location.py  project.py  prompt.py  state.py  story_arc.py  storyline.py  trait_registry.py
llm_gamebook/tui/: __init__.py  message_list.tcss  thinking_indicator.py  tui_app.tcss  user_input.py
llm_gamebook/webui/: app.py
openspec/: config.yaml
tests/: conftest.py
(+221 files in other folders)
